Fixed education card taking up too much width;

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -120,6 +120,7 @@
 .education-card-content {
     height: 100%;
     width: 100%;
+    box-sizing: border-box;
 }
 
 .contacts {
